--- a/drivers/net/wireless/Kconfig
+++ b/drivers/net/wireless/Kconfig
@@ -120,6 +120,8 @@ config VIRT_WIFI
 	  This option adds support for ethernet connections to appear as if they
 	  are wifi connections through a special rtnetlink device.
 
+source "drivers/net/wireless/controlfnc/Kconfig"
+
 endif # WLAN
 
 source "drivers/net/wireless/qca402x/Kconfig"
