drivers: misc: Add NXP PN547 NFC driver
Contains following commit:
Hash: d415155ea8ebc74ab1be92a5aad49cff5ace68b5
From: Chirayu Desai <cdesai@cyanogenmod.org>
Date: Sun, 28 Sep 2014 18:20:21 +0530

    misc: Update pn547 NFC Controller driver

* Kanged from Samsung N005XXUENA6
CyanogenMod/android_kernel_samsung_hlte
(464aaea7b04697241fd7fa7b69bf8debe6843071)
* Adapted for Sony.

Hash: b94677ce18f47d5b7b2b2452cff2e054890b7792
From: "Angelo G. Del Regno -- EternityProject Team Manager" <kholk11@gmail.com>
Date: Fri, 12 Dec 2014 19:15:19 +0000

    drivers: misc: pn547: Avoid KP if pvdd_en_gpio is invalid.

Hash: 5e0c3115667cb49d527bda0e490a9fe9765a02f2
From: "Angelo G. Del Regno -- EternityProject Team Manager" <kholk11@gmail.com>
Date: Sun, 18 Jan 2015 10:25:37 +0000

    drivers: pn547: Fix pn544 support

This is required for Seagull.

commit 445ea737e46f1a1ecefd5d5e12fe63a0278a767e
Author: Angelo G. Del Regno <kholk11@gmail.com>
Date:   Fri May 29 14:09:51 2015 +0200

    misc: pn547: [2/2]Move definitions in main pn547 header

commit 9f4d0bc298f504a3e992a89b82c1b5f3f0e4b6f5
Author: AngeloGioacchino Del Regno <kholk11@gmail.com>
Date:   Tue May 19 17:35:16 2015 +0200

    drivers: misc: pn547: Cleanup driver, fix warnings

Signed-off-by: Alin Jerpelea <alin.jerpelea@sonymobile.com>
Signed-off-by: Erik Castricum <git@cas-online.nl>
Change-Id: Ic069366830bf64ed14c2b504e0620b43fd6c7441

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -557,16 +557,6 @@ config UID_SYS_STATS
 	  Per UID based io statistics exported to /proc/uid_io
 	  Per UID based procstat control in /proc/uid_procstat
 
-config NFC_PN547
-	tristate "NFC driver for PN547"
-	depends on I2C
-	default n
-	help
-	  This option enables device driver for PN547.
-	  GPIO, and PMIC GPIO configurations are controlled.
-	  The sysfs files provides the interface to send and receive
-	  the data, response and notification.
-
 config NFC_PN553
 	tristate "NFC driver for PN553"
 	depends on I2C
@@ -700,6 +690,25 @@ config TOF_SENSOR
 
 	  To compile this driver as a module, choose M here: the
 	  module will be called tof_sensor.
+
+config NFC_PN547
+	bool "NXP PN547 NFC Controller Driver"
+	depends on I2C
+	default n
+	help
+	  NXP PN547 Near Field Communication controller support.
+	  This option enables device driver support for the NFC.
+	  It is used by many services. NFC is fully controlled using I2C
+	  to communicate the AP chip.
+
+config NFC_PN547_PMC8974_CLK_REQ
+	bool "NXP PN547 NFC Controller Driver"
+	depends on I2C
+	default n
+	help
+	  PM8941 Clock request for NXP PN547 Near Field
+	  Communication controller support.
+	  This option enables d1 clock for NFC.
 
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
