--- a/drivers/bluetooth/Makefile
+++ b/drivers/bluetooth/Makefile
@@ -49,4 +49,6 @@ hci_uart-$(CONFIG_BT_HCIUART_AG6XX)	+= hci_ag6xx.o
 hci_uart-$(CONFIG_BT_HCIUART_MRVL)	+= hci_mrvl.o
 hci_uart-objs				:= $(hci_uart-y)
 
+obj-$(CONFIG_ARCH_SONY_KITAKAMI) += broadcom/
+
 ccflags-y += -D__CHECK_ENDIAN__
