power: Add Qnovo QNS system wrapper driver
Qnovo QNS is a battery charging controller and it needs to
access kernel to control charging HW.
The QNS system uses a closed source userspace daemon.

--- a/drivers/power/Makefile
+++ b/drivers/power/Makefile
@@ -4,3 +4,4 @@ obj-$(CONFIG_POWER_SUPPLY)	+= supply/
 obj-$(CONFIG_ARCH_QCOM)		+= qcom/
 obj-$(CONFIG_ARCH_QCOM)		+= qcom/
 obj-$(CONFIG_POWER_SUPPLY)	+= supply/
+obj-$(CONFIG_QNS_SYSTEM)	+= qns_system.o
