arm: DT: MSM8996: Add firmware name to ssc-sensors
The ssc-sensors driver wants to know which firmware does it have
to load at boot time. This is not managed anymore only by the
subsys-pil-tz driver.

--- a/arch/arm/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996.dtsi
@@ -4119,6 +4119,7 @@
 
 	ssc_sensors: qcom,msm-ssc-sensors {
 		compatible = "qcom,msm-ssc-sensors";
+		qcom,firmware-name = "slpi";
 		status = "ok";
 		qcom,firmware-name = "slpi";
 	};
