--- a/drivers/iio/adc/Kconfig
+++ b/drivers/iio/adc/Kconfig
@@ -408,6 +408,14 @@ config QCOM_SPMI_VADC
 	  To compile this driver as a module, choose M here: the module will
 	  be called qcom-spmi-vadc.
 
+config SOMC_RRADC_EXTENSION
+	bool "SoMC Extension for QC PMIC Round Robin ADC"
+	depends on QCOM_RRADC
+	default y if ARCH_SONY_YOSHINO
+	help
+	  This is additional code from SoMC for RRADC. Adds a DT
+	  property for custom RRADC registers configuration.
+
 config QCOM_TADC
 	tristate "Qualcomm Technologies, Inc. TADC driver"
 	depends on MFD_I2C_PMIC
