--- a/drivers/usb/dwc3/Kconfig
+++ b/drivers/usb/dwc3/Kconfig
@@ -111,4 +111,14 @@ config USB_DWC3_MSM
 	help
 	  Applicable to QTI MSM Platforms with DesignWare Core USB3 IP,
 	  say 'Y' or 'M' if you have one such device.
+
+config USB_DWC3_MSM_ID_POLL
+	bool "Support ID polling function on DesignWare USB Controller for MSM"
+	depends on USB_DWC3_DUAL_ROLE
+	depends on USB_DWC3_MSM
+	depends on USB_DWC3
+	default n
+	help
+	  Say Y here to enable the ID polling function on the DesignWare USB3.0
+	  (DRD) Controller for MSM driver.
 endif
