--- a/arch/arm64/boot/dts/qcom/dsi-panel-somc-dora.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-somc-dora.dtsi
@@ -42,6 +42,25 @@
 				24 1f 08 09 05 03 04 a0
 				24 1f 08 09 05 03 04 a0
 				24 1b 08 09 05 03 04 a0];
+		qcom,mdss-dsi-display-timings {
+			1080p60 {
+				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+			};
+
+			1080p120 {
+				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+			};
+		};
 	};
 
 	dsi_jdi_synaptics_cmd_6: somc,jdi_synaptics_cmd_6_panel {
@@ -63,6 +82,25 @@
 				24 1f 08 09 05 03 04 a0
 				24 1f 08 09 05 03 04 a0
 				24 1b 08 09 05 03 04 a0];
+		qcom,mdss-dsi-display-timings {
+			1080p60 {
+				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+			};
+
+			1080p120 {
+				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+			};
+		};
 	};
 
 	dsi_lgd_synaptics_cmd_8: somc,lgd_synaptics_cmd_8_panel {
@@ -84,6 +122,25 @@
 				24 1f 08 09 05 03 04 a0
 				24 1f 08 09 05 03 04 a0
 				24 1b 08 09 05 03 04 a0];
+		qcom,mdss-dsi-display-timings {
+			1080p60 {
+				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+			};
+
+			1080p120 {
+				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+			};
+		};
 	};
 
 	dsi_sharp_synaptics_cmd_3: somc,sharp_synaptics_cmd_3_panel {
@@ -105,6 +162,25 @@
 				24 1f 08 09 05 03 04 a0
 				24 1f 08 09 05 03 04 a0
 				24 1b 08 09 05 03 04 a0];
+		qcom,mdss-dsi-display-timings {
+			1080p60 {
+				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+			};
+
+			1080p120 {
+				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+			};
+		};
 	};
 
 	dsi_sharp_synaptics_cmd_9: somc,sharp_synaptics_cmd_9_panel {
@@ -126,6 +202,25 @@
 				24 1f 08 09 05 03 04 a0
 				24 1f 08 09 05 03 04 a0
 				24 1b 08 09 05 03 04 a0];
+		qcom,mdss-dsi-display-timings {
+			1080p60 {
+				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+			};
+
+			1080p120 {
+				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+			};
+		};
 	};
 
 	dsi_default_panel: somc,default_cmd_panel {
@@ -133,18 +228,9 @@
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
 		qcom,mdss-dsi-panel-destination = "display_1";
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
-		qcom,mdss-dsi-panel-width = <1080>;
-		qcom,mdss-dsi-panel-height = <1920>;
 		qcom,mdss-dsi-bpp = <24>;
-		qcom,mdss-dsi-h-back-porch = <8>;
-		qcom,mdss-dsi-h-pulse-width = <8>;
-		qcom,mdss-dsi-h-front-porch = <56>;
-		qcom,mdss-dsi-v-back-porch = <8>;
-		qcom,mdss-dsi-v-pulse-width = <8>;
-		qcom,mdss-dsi-v-front-porch = <227>;
 		qcom,mdss-pan-physical-width-dimension = <61>;
 		qcom,mdss-pan-physical-height-dimension = <110>;
-		qcom,mdss-dsi-panel-framerate = <60>;
 		qcom,mdss-dsi-virtual-channel-id = <0>;
 		qcom,mdss-dsi-stream = <0>;
 		qcom,mdss-dsi-h-sync-skew = <0>;
@@ -161,18 +247,9 @@
 		qcom,mdss-dsi-dma-trigger = "trigger_sw";
 		qcom,mdss-dsi-mdp-trigger = "none";
 		qcom,mdss-dsi-tx-eot-append;
-		qcom,mdss-dsi-on-command = [
-				39 01 00 00 00 00 02 36 00
-				39 01 00 00 00 00 02 3A 77
-				39 01 00 00 00 00 05 2A 00 00 04 37
-				39 01 00 00 00 00 05 2B 00 00 07 7F
-				39 01 00 00 78 00 01 11];
-		qcom,mdss-dsi-post-panel-on-command = [
-				39 01 00 00 00 00 01 29];
 		qcom,mdss-dsi-off-command = [
 				39 01 00 00 14 00 01 28
 				39 01 00 00 50 00 01 10];
-		qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
 		qcom,mdss-dsi-off-command-state = "dsi_hs_mode";
 		qcom,mdss-dsi-te-pin-select = <1>;
 		qcom,mdss-dsi-wr-mem-start = <0x2c>;
@@ -184,9 +261,6 @@
 		qcom,mdss-dsi-lane-1-state;
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
-		qcom,mdss-dsi-panel-timings = [E6 38 26 00 68 6E 2A 3C 2C 03 04 00];
-		qcom,mdss-dsi-t-clk-post = <0x1B>;
-		qcom,mdss-dsi-t-clk-pre = <0x2B>;
 		qcom,panel-supply-entries = <&dsi_panel_pwr_supply_hybrid_incell>;
 		qcom,mdss-dsi-lp11-init;
 		qcom,mdss-dsi-bl-min-level = <1>;
@@ -236,5 +310,38 @@
 				24 1b 08 09 05 03 04 a0];
 
 		somc,ewu-wait-after-touch-reset = <40>;
+
+		qcom,mdss-dsi-display-timings {
+			1080p60 {
+				qcom,mdss-dsi-timing-default;
+				qcom,mdss-dsi-panel-width = <1080>;
+				qcom,mdss-dsi-panel-height = <1920>;
+				qcom,mdss-dsi-h-back-porch = <8>;
+				qcom,mdss-dsi-h-pulse-width = <8>;
+				qcom,mdss-dsi-h-front-porch = <56>;
+				qcom,mdss-dsi-v-back-porch = <8>;
+				qcom,mdss-dsi-v-pulse-width = <8>;
+				qcom,mdss-dsi-v-front-porch = <227>;
+				qcom,mdss-dsi-panel-framerate = <60>;
+				qcom,mdss-dsi-panel-timings = [E6 38 26 00 68 6E 2A 3C 2C 03 04 00];
+				qcom,mdss-dsi-t-clk-post = <0x1B>;
+				qcom,mdss-dsi-t-clk-pre = <0x2B>;
+				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+				qcom,mdss-dsi-on-command = [
+						39 01 00 00 00 00 02 36 00
+						39 01 00 00 00 00 02 3A 77
+						39 01 00 00 00 00 05 2A 00 00 04 37
+						39 01 00 00 00 00 05 2B 00 00 07 7F
+						39 01 00 00 78 00 01 11];
+				qcom,mdss-dsi-post-panel-on-command = [
+						39 01 00 00 00 00 01 29];
+				qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
+			};
+		};
 	};
 };
