--- a/arch/arm64/boot/dts/qcom/dsi-panel-somc-synaptics-jdi-1080p-cmd.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-somc-synaptics-jdi-1080p-cmd.dtsi
@@ -23,18 +23,9 @@
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
 		qcom,mdss-dsi-panel-destination = "display_1";
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
-		qcom,mdss-dsi-panel-width = <1080>;
-		qcom,mdss-dsi-panel-height = <1920>;
 		qcom,mdss-dsi-bpp = <24>;
-		qcom,mdss-dsi-h-back-porch = <8>;
-		qcom,mdss-dsi-h-pulse-width = <8>;
-		qcom,mdss-dsi-h-front-porch = <56>;
-		qcom,mdss-dsi-v-back-porch = <8>;
-		qcom,mdss-dsi-v-pulse-width = <8>;
-		qcom,mdss-dsi-v-front-porch = <227>;
 		qcom,mdss-pan-physical-width-dimension = <61>;
 		qcom,mdss-pan-physical-height-dimension = <110>;
-		qcom,mdss-dsi-panel-framerate = <60>;
 		qcom,mdss-dsi-virtual-channel-id = <0>;
 		qcom,mdss-dsi-stream = <0>;
 		qcom,mdss-dsi-h-sync-skew = <0>;
@@ -51,27 +42,9 @@
 		qcom,mdss-dsi-dma-trigger = "trigger_sw";
 		qcom,mdss-dsi-mdp-trigger = "none";
 		qcom,mdss-dsi-tx-eot-append;
-		qcom,mdss-dsi-on-command = [
-				29 01 00 00 00 00 02 B0 00
-				29 01 00 00 00 00 02 D6 01
-				29 01 00 00 00 00 03 C4 70 03
-				29 01 00 00 00 00 1B ED 27 31 2F 13 00 6A 99 03 17 91 F2 00 00 03 14 17 3F 14 12 26 23 00 20 00 00 57
-				29 01 00 00 00 00 1B EE 13 61 5F 09 00 6A 99 03 00 01 B2 00 00 03 00 00 33 14 12 00 21 00 20 00 00 57
-				29 01 00 00 00 00 1B EF 27 31 2F 13 00 00 00 00 00 00 00 00 00 03 14 17 0F 14 00 00 20 00 00 00 00 A6
-				29 01 00 00 00 00 1B F0 E3 07 73 DF 00 00 00 00 00 00 00 00 E0 E3 00 00 03 14 00 00 20 00 00 00 00 A7
-				39 01 00 00 00 00 02 35 00
-				39 01 00 00 00 00 02 36 00
-				39 01 00 00 00 00 02 3A 77
-				39 01 00 00 00 00 05 2A 00 00 04 37
-				39 01 00 00 00 00 05 2B 00 00 07 7F
-				39 01 00 00 00 00 03 44 00 00
-				39 01 00 00 78 00 01 11];
-		qcom,mdss-dsi-post-panel-on-command = [
-				39 01 00 00 00 00 01 29];
 		qcom,mdss-dsi-off-command = [
 				39 01 00 00 14 00 01 28
 				39 01 00 00 50 00 01 10];
-		qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
 		qcom,mdss-dsi-off-command-state = "dsi_hs_mode";
 		qcom,mdss-dsi-te-pin-select = <1>;
 		qcom,mdss-dsi-wr-mem-start = <0x2c>;
@@ -83,28 +56,20 @@
 		qcom,mdss-dsi-lane-1-state;
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
-		qcom,mdss-dsi-panel-timings = [E6 38 26 00 68 6E 2A 3C 2C 03 04 00];
-		qcom,mdss-dsi-t-clk-post = <0x1B>;
-		qcom,mdss-dsi-t-clk-pre = <0x2B>;
-		qcom,panel-supply-entries = <&dsi_panel_pwr_supply_hybrid_incell>;
 		qcom,mdss-dsi-lp11-init;
 		qcom,mdss-dsi-bl-min-level = <1>;
 		qcom,mdss-dsi-bl-max-level = <4095>;
 		qcom,mdss-brightness-max-level = <255>;
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
 
-		qcom,qpnp-lab-limit-maximum-current = <200>;
-		qcom,qpnp-ibb-limit-maximum-current = <800>;
 		somc,qpnp-lab-max-precharge-time = <300>;
 		somc,qpnp-lab-soft-start = <800>;
 		somc,qpnp-lab-pull-down-enable;
 		somc,qpnp-lab-full-pull-down;
 		somc,qpnp-ibb-pull-down-enable;
 		somc,qpnp-ibb-full-pull-down;
-
 		somc,lcd-id = <0>;
 		somc,lcd-id-adc = <353000 653000>;
-		somc,mdss-dsi-master;
 		somc,pw-on-rst-seq = <0 10>, <1 16>, <0 7>, <1 16>;
 		somc,pw-off-rst-b-seq = <0 11>;
 		somc,pw-wait-after-on-vdd = <0>;
@@ -125,11 +90,7 @@
 		somc,pw-wait-after-off-touch-reset = <5>;
 		somc,pw-wait-after-off-touch-int-n = <0>;
 		somc,pw-down-period = <100>;
-		somc,lab-output-voltage = <5600000>;
-		somc,ibb-output-voltage = <5600000>;
-
 		somc,ewu-wait-after-touch-reset = <40>;
-
 		somc,mdss-dsi-disp-on-in-hs = <0>;
 		somc,mdss-dsi-wait-time-before-post-on-cmd = <0>;
 
@@ -151,7 +112,6 @@
 		somc,change-fps-send-byte = <4>;
 		somc,change-fps-porch-mask-pos = <3>;
 		somc,change-fps-porch-mask = <0xF0>;
-
 		somc,mdss-dsi-pcc-enable;
 		somc,mdss-dsi-u-rev = <0 8>;
 		somc,mdss-dsi-v-rev = <0 8>;
@@ -386,5 +346,80 @@
 				0x00 0xE0 0x04 0x07 0x00 0x03 0x8000 0x8000 0x8000
 				0x00 0xE1 0x00 0x03 0x00 0x03 0x8000 0x8000 0x8000
 				0xFF 0x00 0x0E 0x38 0x0C 0x2F 0x8000 0x8000 0x8000>;
+
+		qcom,dynamic-mode-switch-enabled;
+		qcom,dynamic-mode-switch-type = "dynamic-resolution-switch-immediate";
+		qcom,mdss-dsi-display-timings {
+			1080p60 {
+				qcom,mdss-dsi-timing-default;
+				qcom,mdss-dsi-panel-width = <1080>;
+				qcom,mdss-dsi-panel-height = <1920>;
+				qcom,mdss-dsi-h-back-porch = <8>;
+				qcom,mdss-dsi-h-pulse-width = <8>;
+				qcom,mdss-dsi-h-front-porch = <56>;
+				qcom,mdss-dsi-v-back-porch = <8>;
+				qcom,mdss-dsi-v-pulse-width = <8>;
+				qcom,mdss-dsi-v-front-porch = <227>;
+				qcom,mdss-dsi-panel-framerate = <60>;
+				qcom,mdss-dsi-panel-timings = [E6 38 26 00 68 6E 2A 3C 2C 03 04 00];
+				qcom,mdss-dsi-t-clk-post = <0x1B>;
+				qcom,mdss-dsi-t-clk-pre = <0x2B>;
+				qcom,mdss-dsi-on-command = [
+						29 01 00 00 00 00 02 B0 00
+						29 01 00 00 00 00 02 D6 01
+						29 01 00 00 00 00 03 C4 70 03
+						29 01 00 00 00 00 1B ED 27 31 2F 13 00 6A 99 03 17 91 F2 00 00 03 14 17 3F 14 12 26 23 00 20 00 00 57
+						29 01 00 00 00 00 1B EE 13 61 5F 09 00 6A 99 03 00 01 B2 00 00 03 00 00 33 14 12 00 21 00 20 00 00 57
+						29 01 00 00 00 00 1B EF 27 31 2F 13 00 00 00 00 00 00 00 00 00 03 14 17 0F 14 00 00 20 00 00 00 00 A6
+						29 01 00 00 00 00 1B F0 E3 07 73 DF 00 00 00 00 00 00 00 00 E0 E3 00 00 03 14 00 00 20 00 00 00 00 A7
+						39 01 00 00 00 00 02 35 00
+						39 01 00 00 00 00 02 36 00
+						39 01 00 00 00 00 02 3A 77
+						39 01 00 00 00 00 05 2A 00 00 04 37
+						39 01 00 00 00 00 05 2B 00 00 07 7F
+						39 01 00 00 00 00 03 44 00 00
+						39 01 00 00 78 00 01 11];
+				qcom,mdss-dsi-post-panel-on-command = [
+						39 01 00 00 00 00 01 29];
+				qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
+
+				qcom,mdss-tear-check-sync-cfg-height = <4326>;
+			};
+
+			1080p120 {
+				qcom,mdss-dsi-panel-width = <1080>;
+				qcom,mdss-dsi-panel-height = <1920>;
+				qcom,mdss-dsi-h-back-porch = <8>;
+				qcom,mdss-dsi-h-pulse-width = <8>;
+				qcom,mdss-dsi-h-front-porch = <56>;
+				qcom,mdss-dsi-v-back-porch = <8>;
+				qcom,mdss-dsi-v-pulse-width = <8>;
+				qcom,mdss-dsi-v-front-porch = <227>;
+				qcom,mdss-dsi-panel-framerate = <120>;
+				qcom,mdss-dsi-panel-timings = [E6 38 26 00 68 6E 2A 3C 2C 03 04 00];
+				qcom,mdss-dsi-t-clk-post = <0x1B>;
+				qcom,mdss-dsi-t-clk-pre = <0x2B>;
+				qcom,mdss-dsi-on-command = [
+						29 01 00 00 00 00 02 B0 00
+						29 01 00 00 00 00 02 D6 01
+						29 01 00 00 00 00 03 C4 70 03
+						29 01 00 00 00 00 1B ED 27 31 2F 13 00 6A 99 03 17 91 F2 00 00 03 14 17 3F 14 12 26 23 00 20 00 00 57
+						29 01 00 00 00 00 1B EE 13 61 5F 09 00 6A 99 03 00 01 B2 00 00 03 00 00 33 14 12 00 21 00 20 00 00 57
+						29 01 00 00 00 00 1B EF 27 31 2F 13 00 00 00 00 00 00 00 00 00 03 14 17 0F 14 00 00 20 00 00 00 00 A6
+						29 01 00 00 00 00 1B F0 E3 07 73 DF 00 00 00 00 00 00 00 00 E0 E3 00 00 03 14 00 00 20 00 00 00 00 A7
+						39 01 00 00 00 00 02 35 00
+						39 01 00 00 00 00 02 36 00
+						39 01 00 00 00 00 02 3A 77
+						39 01 00 00 00 00 05 2A 00 00 04 37
+						39 01 00 00 00 00 05 2B 00 00 07 7F
+						39 01 00 00 00 00 03 44 00 00
+						39 01 00 00 78 00 01 11];
+				qcom,mdss-dsi-post-panel-on-command = [
+						39 01 00 00 00 00 01 29];
+				qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
+
+				qcom,mdss-tear-check-sync-cfg-height = <4326>;
+			};
+		};
 	};
 };
