--- a/arch/arm64/boot/dts/qcom/dsi-panel-somc-synaptics-lgd-1080p-cmd.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-somc-synaptics-lgd-1080p-cmd.dtsi
@@ -23,18 +23,9 @@
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
 		qcom,mdss-dsi-panel-destination = "display_1";
-		qcom,mdss-dsi-panel-width = <1080>;
-		qcom,mdss-dsi-panel-height = <1920>;
 		qcom,mdss-dsi-bpp = <24>;
-		qcom,mdss-dsi-h-back-porch = <8>;
-		qcom,mdss-dsi-h-pulse-width = <8>;
-		qcom,mdss-dsi-h-front-porch = <56>;
-		qcom,mdss-dsi-v-back-porch = <8>;
-		qcom,mdss-dsi-v-pulse-width = <8>;
-		qcom,mdss-dsi-v-front-porch = <227>;
 		qcom,mdss-pan-physical-width-dimension = <61>;
 		qcom,mdss-pan-physical-height-dimension = <110>;
-		qcom,mdss-dsi-panel-framerate = <60>;
 		qcom,mdss-dsi-virtual-channel-id = <0>;
 		qcom,mdss-dsi-stream = <0>;
 		qcom,mdss-dsi-h-sync-skew = <0>;
@@ -51,18 +42,9 @@
 		qcom,mdss-dsi-dma-trigger = "trigger_sw";
 		qcom,mdss-dsi-mdp-trigger = "none";
 		qcom,mdss-dsi-tx-eot-append;
-		qcom,mdss-dsi-on-command = [
-				23 01 00 00 00 00 02 B0 04
-				23 01 00 00 00 00 02 D6 01
-				29 01 00 00 00 00 20 C1 84 00 10 F0 47 F9 FF AF FF AF CF 9A 73 8D FD F5 7F FD FF 0F F1 1F 00 AA 40 02 C2 11 08 00 01
-				29 01 00 00 00 00 0a CB 8D F4 4B 2C 00 04 08 00 00
-				05 01 00 00 64 00 01 11];
-		qcom,mdss-dsi-post-panel-on-command = [
-				05 01 00 00 00 00 01 29];
 		qcom,mdss-dsi-off-command = [
 				05 01 00 00 14 00 01 28
 				05 01 00 00 64 00 01 10];
-		qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
 		qcom,mdss-dsi-off-command-state = "dsi_hs_mode";
 		qcom,mdss-dsi-te-pin-select = <1>;
 		qcom,mdss-dsi-wr-mem-start = <0x2c>;
@@ -74,28 +56,14 @@
 		qcom,mdss-dsi-lane-1-state;
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
-		qcom,mdss-dsi-panel-timings = [E6 38 26 00 68 6E 2A 3C 2C 03 04 00];
-		qcom,mdss-dsi-t-clk-post = <0x1B>;
-		qcom,mdss-dsi-t-clk-pre = <0x2B>;
-		qcom,panel-supply-entries = <&dsi_panel_pwr_supply_full_incell>;
 		qcom,mdss-dsi-lp11-init;
 		qcom,mdss-dsi-bl-min-level = <1>;
 		qcom,mdss-dsi-bl-max-level = <4095>;
 		qcom,mdss-brightness-max-level = <255>;
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
 
-		qcom,qpnp-lab-limit-maximum-current = <200>;
-		qcom,qpnp-ibb-limit-maximum-current = <800>;
-		somc,qpnp-lab-max-precharge-time = <300>;
-		somc,qpnp-lab-soft-start = <800>;
-		somc,qpnp-lab-pull-down-enable;
-		somc,qpnp-lab-full-pull-down;
-		somc,qpnp-ibb-pull-down-enable;
-		somc,qpnp-ibb-full-pull-down;
-
 		somc,lcd-id = <0>;
 		somc,lcd-id-adc = <215000 256000>;
-		somc,mdss-dsi-master;
 		somc,pw-on-rst-seq = <0 1>, <1 10>;
 		somc,pw-off-rst-seq = <0 0>;
 		somc,pw-wait-after-on-vdd = <0>;
@@ -113,12 +81,8 @@
 		somc,pw-wait-after-off-touch-reset = <11>;
 		somc,pw-wait-after-off-touch-int-n = <0>;
 		somc,pw-down-period = <100>;
-		somc,lab-output-voltage = <5500000>;
-		somc,ibb-output-voltage = <5500000>;
-
 		somc,ewu-rst-seq = <0 2>, <1 5>;
 		somc,ewu-wait-after-touch-reset = <0>;
-
 		somc,mdss-dsi-disp-on-in-hs = <0>;
 		somc,mdss-dsi-wait-time-before-post-on-cmd = <0>;
 
@@ -137,7 +101,6 @@
 		somc,driver-ic-rclk = <14000000>;
 		somc,driver-ic-vtp = <682>;
 		somc,change-fps-rtn-pos = <2 1>;
-
 		somc,mdss-dsi-pcc-enable;
 		somc,mdss-dsi-uv-command = [06 01 00 00 00 00 01 DA
 			06 01 00 00 00 00 01 DB];
@@ -370,5 +333,60 @@
 				0x00 0xE0 0x04 0x07 0x00 0x03 0x8000 0x8000 0x8000
 				0x00 0xE1 0x00 0x03 0x00 0x03 0x8000 0x8000 0x8000
 				0xFF 0x00 0x0E 0x38 0x0C 0x2F 0x8000 0x8000 0x8000>;
+
+		qcom,mdss-dsi-display-timings {
+			1080p60 {
+				qcom,mdss-dsi-timing-default;
+				qcom,mdss-dsi-panel-width = <1080>;
+				qcom,mdss-dsi-panel-height = <1920>;
+				qcom,mdss-dsi-h-back-porch = <8>;
+				qcom,mdss-dsi-h-pulse-width = <8>;
+				qcom,mdss-dsi-h-front-porch = <56>;
+				qcom,mdss-dsi-v-back-porch = <8>;
+				qcom,mdss-dsi-v-pulse-width = <8>;
+				qcom,mdss-dsi-v-front-porch = <227>;
+				qcom,mdss-dsi-panel-framerate = <60>;
+				qcom,mdss-dsi-panel-timings = [E6 38 26 00 68 6E 2A 3C 2C 03 04 00];
+				qcom,mdss-dsi-t-clk-post = <0x1B>;
+				qcom,mdss-dsi-t-clk-pre = <0x2B>;
+				qcom,mdss-dsi-on-command = [
+						23 01 00 00 00 00 02 B0 04
+						23 01 00 00 00 00 02 D6 01
+						29 01 00 00 00 00 20 C1 84 00 10 F0 47 F9 FF AF FF AF CF 9A 73 8D FD F5 7F FD FF 0F F1 1F 00 AA 40 02 C2 11 08 00 01
+						29 01 00 00 00 00 0a CB 8D F4 4B 2C 00 04 08 00 00
+						05 01 00 00 64 00 01 11];
+				qcom,mdss-dsi-post-panel-on-command = [
+						05 01 00 00 00 00 01 29];
+				qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
+
+				qcom,mdss-tear-check-sync-cfg-height = <4326>;
+			};
+
+			1080p120 {
+				qcom,mdss-dsi-panel-width = <1080>;
+				qcom,mdss-dsi-panel-height = <1920>;
+				qcom,mdss-dsi-h-back-porch = <8>;
+				qcom,mdss-dsi-h-pulse-width = <8>;
+				qcom,mdss-dsi-h-front-porch = <56>;
+				qcom,mdss-dsi-v-back-porch = <8>;
+				qcom,mdss-dsi-v-pulse-width = <8>;
+				qcom,mdss-dsi-v-front-porch = <227>;
+				qcom,mdss-dsi-panel-framerate = <120>;
+				qcom,mdss-dsi-panel-timings = [E6 38 26 00 68 6E 2A 3C 2C 03 04 00];
+				qcom,mdss-dsi-t-clk-post = <0x1B>;
+				qcom,mdss-dsi-t-clk-pre = <0x2B>;
+				qcom,mdss-dsi-on-command = [
+						23 01 00 00 00 00 02 B0 04
+						23 01 00 00 00 00 02 D6 01
+						29 01 00 00 00 00 20 C1 84 00 10 F0 47 F9 FF AF FF AF CF 9A 73 8D FD F5 7F FD FF 0F F1 1F 00 AA 40 02 C2 11 08 00 01
+						29 01 00 00 00 00 0a CB 8D F4 4B 2C 00 04 08 00 00
+						05 01 00 00 64 00 01 11];
+				qcom,mdss-dsi-post-panel-on-command = [
+						05 01 00 00 00 00 01 29];
+				qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
+
+				qcom,mdss-tear-check-sync-cfg-height = <4326>;
+			};
+		};
 	};
 };
