arm: DT: Tone: Enable susres DRS on Dora, Kagura, Keyaki
Dora, Kagura and Keyaki can now support DRS with suspend-resume
method. For now, only two configurations are given for their
panels: 1080p@60Hz, 1080p@120Hz.

Yes, this can be done in another way, but the final plan is to
eventually add 720p@60Hz, 720p@120Hz.

--- a/arch/arm64/boot/dts/qcom/dsi-panel-somc-kagura.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-somc-kagura.dtsi
@@ -53,6 +53,8 @@
 		somc,pw-wait-after-on-touch-reset-first = <90>;
 		somc,pw-wait-after-on-touch-int-n = <10>;
 
+		qcom,dynamic-mode-switch-enabled;
+		qcom,dynamic-mode-switch-type = "dynamic-resolution-switch-susres";
 		qcom,mdss-dsi-display-timings {
 			1080p60 {
 				qcom,mdss-dsi-panel-timings-phy-v2 = [
@@ -121,6 +123,8 @@
 		somc,pw-wait-after-on-touch-int-n = <10>;
 		somc,pw-wait-after-off-touch-reset = <6>;
 
+		qcom,dynamic-mode-switch-enabled;
+		qcom,dynamic-mode-switch-type = "dynamic-resolution-switch-susres";
 		qcom,mdss-dsi-display-timings {
 			1080p60 {
 				qcom,mdss-dsi-panel-timings-phy-v2 = [
