--- a/arch/arm64/boot/dts/qcom/dsi-panel-somc-dora.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-somc-dora.dtsi
@@ -42,6 +42,8 @@
 				24 1f 08 09 05 03 04 a0
 				24 1f 08 09 05 03 04 a0
 				24 1b 08 09 05 03 04 a0];
+		qcom,dynamic-mode-switch-enabled;
+		qcom,dynamic-mode-switch-type = "dynamic-resolution-switch-susres";
 		qcom,mdss-dsi-display-timings {
 			1080p60 {
 				qcom,mdss-dsi-panel-timings-phy-v2 = [
@@ -82,6 +84,8 @@
 				24 1f 08 09 05 03 04 a0
 				24 1f 08 09 05 03 04 a0
 				24 1b 08 09 05 03 04 a0];
+		qcom,dynamic-mode-switch-enabled;
+		qcom,dynamic-mode-switch-type = "dynamic-resolution-switch-susres";
 		qcom,mdss-dsi-display-timings {
 			1080p60 {
 				qcom,mdss-dsi-panel-timings-phy-v2 = [
@@ -122,6 +126,8 @@
 				24 1f 08 09 05 03 04 a0
 				24 1f 08 09 05 03 04 a0
 				24 1b 08 09 05 03 04 a0];
+		qcom,dynamic-mode-switch-enabled;
+		qcom,dynamic-mode-switch-type = "dynamic-resolution-switch-susres";
 		qcom,mdss-dsi-display-timings {
 			1080p60 {
 				qcom,mdss-dsi-panel-timings-phy-v2 = [
@@ -162,6 +168,8 @@
 				24 1f 08 09 05 03 04 a0
 				24 1f 08 09 05 03 04 a0
 				24 1b 08 09 05 03 04 a0];
+		qcom,dynamic-mode-switch-enabled;
+		qcom,dynamic-mode-switch-type = "dynamic-resolution-switch-susres";
 		qcom,mdss-dsi-display-timings {
 			1080p60 {
 				qcom,mdss-dsi-panel-timings-phy-v2 = [
@@ -202,6 +210,8 @@
 				24 1f 08 09 05 03 04 a0
 				24 1f 08 09 05 03 04 a0
 				24 1b 08 09 05 03 04 a0];
+		qcom,dynamic-mode-switch-enabled;
+		qcom,dynamic-mode-switch-type = "dynamic-resolution-switch-susres";
 		qcom,mdss-dsi-display-timings {
 			1080p60 {
 				qcom,mdss-dsi-panel-timings-phy-v2 = [
