arm: DT: Dora: Enable USB OTG functionality with new ID detection
The newest version of our driver can now get the ID state through
a VADC channel that is forcefully called "usb_detect".
Change the channel name to reflect that, the instruct DWC3 to get
the state from the proper VADC and relative channel.
Also, signal that Type-C is missing on this board to trigger DWC3
internal ID work.

--- a/arch/arm64/boot/dts/qcom/msm8996-tone-dora-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-tone-dora-common.dtsi
@@ -126,16 +126,18 @@
 	id_polling_up_interval = <2000>;
 	id_polling_up_period = <500>;
 	id_polling_pd_gpio = <&tlmm 24 0>;
-	id_lv_vadc_channel = <0x39>;
-	qcom,usb_id_lv-vadc = <&pm8994_vadc>;
-	qcom,usbin-vadc = <&pmi8994_vadc>;
-	usb_switch_sel = <&pmi8994_gpios 9 0>;
-	usb_id_discharge = <&pmi8994_mpps 1 0>;
+	qcom,usb_detect-vadc = <&pm8994_vadc>;
+	somc,usb_detect_adc_channel = <0x39>;
+	somc,disable-typec-otg;
+
+   /*  ***** Kept for hardware capability reference ***** */
+//	usb_switch_sel = <&pmi8994_gpios 9 0>;
+//	usb_id_discharge = <&pmi8994_mpps 1 0>;
 };
 
 &pm8994_vadc {
 	chan@39 {
-		label = "usb_id_lv";
+		label = "usb_detect";
 		reg = <0x39>;
 		qcom,decimation = <0>;
 		qcom,pre-div-channel-scaling = <0>;
