--- a/drivers/video/fbdev/msm/msm_dba/Kconfig
+++ b/drivers/video/fbdev/msm/msm_dba/Kconfig
@@ -22,3 +22,10 @@ config MSM_DBA_ADV7533
 	  Support for ADV7533 DSI to HDMI display bridge driver. The driver
 	  controls the ADV7533 HW through the I2C interface and configures
 	  the DSI input and HDMI output video format.
+
+config MSM_SIL9612
+	bool "SIL9612 driver support input HDMI transfer"
+	depends on MSM_DBA
+	default n
+	---help---
+	  Support for HDMI Scaler.
