--- a/drivers/power/Makefile
+++ b/drivers/power/Makefile
@@ -5,3 +5,4 @@ obj-$(CONFIG_ARCH_QCOM)		+= qcom/
 obj-$(CONFIG_ARCH_QCOM)		+= qcom/
 obj-$(CONFIG_POWER_SUPPLY)	+= supply/
 obj-$(CONFIG_QNS_SYSTEM)	+= qns_system.o
+obj-$(CONFIG_CHARGER_LIS2XXX)	+= lis2xxx-charger.o
