--- a/drivers/power/Makefile
+++ b/drivers/power/Makefile
@@ -6,3 +6,4 @@ obj-$(CONFIG_ARCH_QCOM)		+= qcom/
 obj-$(CONFIG_POWER_SUPPLY)	+= supply/
 obj-$(CONFIG_QNS_SYSTEM)	+= qns_system.o
 obj-$(CONFIG_CHARGER_LIS2XXX)	+= lis2xxx-charger.o
+obj-$(CONFIG_BATTERY_CCG2)	+= ccg2-battery.o
