arm: DT: Rewrite PM(I)8994 and MSM8996 thermal configuration
This is a rewrite of PM/PMI8994 and thermal configuration for
MSM8996, which is totally related.

--- a/arch/arm64/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996.dtsi
@@ -67,6 +67,7 @@
 			efficiency = <1024>;
 			qcom,ea = <&ea0>;
 			next-level-cache = <&L2_0>;
+			#cooling-cells = <2>;
 			L2_0: l2-cache {
 			      compatible = "cache";
 			      cache-level = <2>;
@@ -90,6 +91,7 @@
 			efficiency = <1024>;
 			qcom,ea = <&ea1>;
 			next-level-cache = <&L2_0>;
+			#cooling-cells = <2>;
 			L1_D_1: l1-dcache {
 				compatible = "cache";
 				qcom,dump-size = <0x7800>;
@@ -108,6 +110,7 @@
 			efficiency = <1536>;
 			qcom,ea = <&ea2>;
 			next-level-cache = <&L2_1>;
+			#cooling-cells = <2>;
 			L2_1: l2-cache {
 			      compatible = "cache";
 			      cache-level = <2>;
@@ -131,6 +134,7 @@
 			efficiency = <1536>;
 			qcom,ea = <&ea3>;
 			next-level-cache = <&L2_1>;
+			#cooling-cells = <2>;
 			L1_D_101: l1-dcache {
 				compatible = "cache";
 				qcom,dump-size = <0x7800>;
@@ -2665,6 +2669,8 @@
 		};
 	};
 
+	thermal_zones: thermal-zones {};
+
 	qcom,sensor-information {
 		compatible = "qcom,sensor-information";
 		sensor_information0: qcom,sensor-information-0 {
@@ -4119,9 +4125,9 @@
 	status = "ok";
 };
 
-#include "msm-pm8994-rpm-regulator.dtsi"
-#include "msm-pm8994.dtsi"
-#include "msm-pmi8994.dtsi"
+#include "pm8994-rpm-regulator.dtsi"
+#include "pm8994.dtsi"
+#include "pmi8994.dtsi"
 #include "msm8996-regulator.dtsi"
 #include "msm8996-camera.dtsi"
 #include "msm8996-gpu.dtsi"
@@ -4129,3 +4135,4 @@
 #include "msm-arm-smmu-8996.dtsi"
 #include "msm8996-vidc.dtsi"
 #include "msm8996-bus.dtsi"
+#include "msm8996-thermal.dtsi"
