--- a/arch/arm64/boot/dts/qcom/msm8996-regulator.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-regulator.dtsi
@@ -45,6 +45,14 @@
 			regulator-max-microvolt = <7>;
 			qcom,use-voltage-corner;
 		};
+
+		cx_cdev: regulator-cx-cdev {
+			compatible = "qcom,regulator-cooling-device";
+			regulator-cdev-supply = <&pm8994_s1_floor_corner>;
+			regulator-levels = <RPM_SMD_REGULATOR_LEVEL_NOM
+					RPM_SMD_REGULATOR_LEVEL_RETENTION>;
+			#cooling-cells = <2>;
+		};
 	};
 
 	/* PM8994 S2 + S12 = 2 phase VDD_MX supply */
@@ -66,6 +74,14 @@
 			regulator-min-microvolt = <1>;
 			regulator-max-microvolt = <7>;
 			qcom,use-voltage-corner;
+		};
+
+		mx_cdev: regulator-mx-cdev {
+			compatible = "qcom,regulator-cooling-device";
+			regulator-cdev-supply = <&pm8994_s2_corner>;
+			regulator-levels = <RPM_SMD_REGULATOR_LEVEL_NOM
+					RPM_SMD_REGULATOR_LEVEL_RETENTION>;
+			#cooling-cells = <2>;
 		};
 	};
 
